2023 Day 8 refactor